# Urchin

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
urchin/: __init__.py  __main__.py  config.py  constants.py
urchin/discord/: __init__.py  bot.py
urchin/discord/addons/: __init__.py  error.py  presence.py  ready.py
urchin/discord/extensions/: hub.py
urchin/utils/: chron.py  string.py
